# ietf-comments

./: .gitignore  LICENSE  Makefile  README.md  format.md  index.html  pyproject.toml  requirements.txt  setup.cfg  test.md
.github/workflows/: codeql-analysis.yml  publish.yml  python-app.yml  quality.yml  test.yml
examples/: ad_comments.md  directorate_comments.md  draft-ietf-bmwg-ngfw-performance-13.md  draft-ietf-rats-yang-tpm-charra-16.md  draft-ietf-raw-ldacs-10.md
ietf_comments/: changes.py  github.py  linkify.py  md_comments.py  parser.py  types.py  ui.py  xml_comments.py
ietf_comments.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
