[metadata]
name = ietf_comments
version = attr: ietf_comments.__version__
author = Mark Nottingham
author_email = mnot@mnot.net
description = Handle the IETF comments format
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mnot/ietf-comments
project_urls =
    Bug Tracker = https://github.com/mnot/ietf-comments/issues
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: BSD License

[options]

packages = find:
python_requires = >=3.6
scripts =
    bin/ietf-comments
install_requires =
    commonmark
    pygithub

[options.extras_require]
dev = mypy; black
